# sieverk

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: SIE-NOTES.md  snapshot-contract.md
fixtures/: invalid_unbalanced.se  minimal_valid.se
src/: accounts.rs  main.rs  metadata.rs  money.rs  tokenizer.rs  validator.rs  vouchers.rs
