[package]
name = "sieverk"
version = "0.1.0"
edition = "2021"

[dependencies]
# SIE files are "PC8" = IBM codepage 437. encoding_rs does NOT cover this
# (it only implements the WHATWG web encodings), so we use codepage-437.
codepage-437 = "0.1"

# Money is i64 öre (src/money.rs) BY DESIGN, not a shortcut: SIE amounts
# are öre-resolution, integer arithmetic is exact, and zero dependencies
# beats a crate whose optional features drag edition-2024 build tooling
# into the lockfile. f64 remains banned.

# Next deps you'll want, when you get there (not yet — keep it minimal):
#   thiserror    = "2"   # structured parse errors instead of panics.
#   clap         = "4"   # subcommands: inspect-sie, validate-sie, ...

[lints.clippy]
# House rule from day one: no unwrap in parser logic. Tests use .expect(),
# which this lint deliberately does not catch.
unwrap_used = "warn"
