[package]
name = "sieverk"
version = "0.1.0"
edition = "2021"

[dependencies]
# SIE files are "PC8" = IBM codepage 437. encoding_rs does NOT cover this
# (it only implements the WHATWG web encodings), so we use codepage-437.
codepage-437 = "0.1"

# Money is i64 öre (src/money.rs) BY DESIGN, not a shortcut: SIE amounts
# are öre-resolution, integer arithmetic is exact, and zero dependencies
# beats a crate whose optional features drag edition-2024 build tooling
# into the lockfile. f64 remains banned.

# Next deps, when they earn their place (not yet — keep it minimal):
#   thiserror = "2"  # structured errors, once error types outgrow String.
#   clap      = "4"  # benched like rust_decimal: two subcommands do not
#                    # justify a parser generator. Revisit when flags grow.

[lints.clippy]
# House rule from day one: no unwrap in parser logic. Tests use .expect(),
# which this lint deliberately does not catch.
unwrap_used = "warn"
